--- a/style.css
+++ b/style.css
@@ -4,17 +4,21 @@
     box-sizing: border-box;
 
 }
+button{
+    border: none;
+    font-size: 18px;
+}
 body{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 46px 0px;
+    padding: 20px 0px;
     background: rgb(240 251 241);
 }
 .main-box{
     width: 300px;
     display: flex;
-    height: 520px;
+    height: 580px;
     flex-direction: column;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     border-radius: 16px;
@@ -26,6 +30,7 @@ body{
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
     background: white;
+    padding: 15px 15px;
 }
 .input{
     background:linear-gradient(to bottom, #b2f9f6, #c7f9ff, #e0f9ff, #f5fbff, #ffffff);;
@@ -38,16 +43,78 @@ body{
     display: grid;
     grid-template-rows: 50px 50px 50px 50px 50px;
     grid-template-columns: 50px 50px 50px 50px;
-    padding: 20px 27px;
-    gap: 15px;
+    padding: 23px 30px;
+    gap: 12px;
 }  
 
 .number{
     background: transparent;
-    border: 1px solid #555;
+    /* border: 1px solid #555; */
     display: flex;
     align-items: center;
     justify-content: center;
     color: #000;
     border-radius: 50%;
+    cursor: pointer;
+   
+}
+.number:hover{
+  
+    background:#15ebe059;
+  
+    transform:rotate(360deg) ;
+      
+     
+
+}
+
+/* .number::after{
+  content: "";
+ position: absolute;
+  width: 4px;
+  height: 4px;
+  opacity: 0;
+  transition: all 0.5s;
+  box-shadow: 0 0 15px 40px #15ebe059;
+}
+.number:active:after {
+    
+    box-shadow: 0 0 0 0 #15ebe059;;
+    border-radius: 50%;
+    opacity: 5;
+    transition: 0s;
+} */
+  
+.dot{
+    font-size: 5px;
+}
+.operator{
+    color: #15ebe2;
+}
+.extra{
+
+  cursor: inherit;
+}
+.extra:hover{
+    background:transparent;
+}
+.power{
+    display: flex;
+    justify-content: end;
+}
+.op-text {
+    width: 100%;
+    height: 85%;
+   
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: end;
+    margin: 10px 0px;
+}
+span{
+    margin: 7px 0px;
+}
+.text-ans{
+    font-size: 24px;
 }
